# problem-gen-template

./: .gitignore  CMakeLists.txt  auto-pack.sh  auto-test.py  batch-test.sh  checker.py  gen.py  pack-config.txt  pack.py  readme.md  utils.py
.github/workflows/: problem-test.yml
problems/add10/data-gen/: data_gen.py  gen-config.csv  validator.py
problems/add10/std/: std.cpp  std1_15.cpp
problems/add11/data-gen/: 2.in  data_gen.py  gen-config.csv
problems/add2/data-gen/: gen-config.csv
problems/add2/docs/: solution.txt
